planet/style.css
:root {
  --node-size: clamp(72px, 9vmin, 140px);
}

html {
  scroll-behavior: smooth;
}

body {
  margin: 0;
  background-color: #c4c4c4;
  font-family: "Source Code Pro";
}

.bg {
  position: relative;
  height: 100vh;
  width: 100%;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  overflow: hidden;
  opacity: 0;
}

.bg.city {
  background-image: url("../images/bg-city.jpg");
}
.bg.nature {
  background-image: url("../images/bg-forest.jpg");
}
.bg.home {
  background-image: url("../images/bg-home.jpg");
}

h,
p,
img {
    pointer-events: none;
}

.scene,
.nodeWrap,
.content {
  position: relative;
  z-index: 1;
}

.scene {
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  position: absolute;
  inset: 0;
  z-index: 0;
}

.nodeWrap {
  position: absolute;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  scale: 1;
  z-index: 2;
}

.node {
  position: absolute;
  width: var(--node-size);
  height: var(--node-size);
  left: calc(var(--x) * 1%);
  top: calc(var(--y) * 1%);
  scale: 1;
  cursor: pointer;
}

.layer {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  filter: brightness(2) blur(1px);
}

.content {
  position: absolute;
  opacity: 0;
  transform: scale(0.9);
  transition: all 0.6s ease;
  max-width: 400px;
  margin: 20px auto;
  text-align: center;
  color: #ffffff;
  background-color: rgba(0, 0, 0, 0.9);
  border: #000000 5px solid;
  border-radius: 32px;
  padding: 20px;
  z-index: 2;
  pointer-events: none;
}

.content.active {
  opacity: 1;
  transform: scale(1);
  pointer-events: auto;
  cursor: pointer;
}

.iot {
  max-width: 8em;
  max-height: 8em;
  aspect-ratio: 1 / 1;
  object-fit: cover;
}

.endCard {
  position: relative;
  width: 100%;
  height: 100vh;
  text-align: center;
  color: #ffffff;
  background-color: #000000;
}

.endText {
  position: absolute;
  width: 100%;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  line-height: 32px;
  font-weight: bold;
}

.endText h1 {
  margin: 0 0 64px 0;
  font-size: 64px;
}

.endText p {
  margin: 0 64px;
  font-size: 28px;
}

/* Node positions */
.node1 {
  --x: 25;
  --y: 18;
}
.node2 {
  --x: 75;
  --y: 35;
}
.node3 {
  --x: 45;
  --y: 65;
}
.node4 {
  --x: 70;
  --y: 18;
}
.node5 {
  --x: 20;
  --y: 40;
}
.node6 {
  --x: 50;
  --y: 68;
}
.node7 {
  --x: 25;
  --y: 20;
}
.node8 {
  --x: 70;
  --y: 35;
}
.node9 {
  --x: 40;
  --y: 70;
}

/* Tablet */
@media (max-width: 75em) {
  :root {
    --node-size: clamp(64px, 10vmin, 128px);
  }
  .node1 {
    --x: 20;
    --y: 16;
  }
  .node2 {
    --x: 70;
    --y: 38;
  }
  .node3 {
    --x: 30;
    --y: 65;
  }
  .node4 {
    --x: 72;
    --y: 18;
  }
  .node5 {
    --x: 20;
    --y: 46;
  }
  .node6 {
    --x: 60;
    --y: 65;
  }
  .node7 {
    --x: 18;
    --y: 18;
  }
  .node8 {
    --x: 65;
    --y: 35;
  }
  .node9 {
    --x: 25;
    --y: 70;
  }

  .endText h1 {
    font-size: 52px;
  }

  .endText p {
    font-size: 24px;
  }
}

/* Mobile */
@media (max-width: 50em) {
  :root {
    --node-size: clamp(56px, 12vmin, 112px);
  }

  .content {
    position: relative;
    max-width: 90vw;
    padding: 0;
    font-size: 14px;
  }

  .node1 {
    --x: 40;
    --y: 8;
  }
  .node2 {
    --x: 10;
    --y: 50;
  }
  .node3 {
    --x: 70;
    --y: 72;
  }

  .node4 {
    --x: 30;
    --y: 8;
  }
  .node5 {
    --x: 70;
    --y: 40;
  }
  .node6 {
    --x: 15;
    --y: 72;
  }

  .node7 {
    --x: 70;
    --y: 8;
  }

  .node8 {
    --x: 10;
    --y: 40;
  }

  .node9 {
    --x: 55;
    --y: 72;
  }

  .endText h1 {
    font-size: 42px;
  }

  .endText p {
    font-size: 18px;
  }
}

